[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/battle/attacks/attack1/firethrower.gd" type="Script" id=1]

[node name="firethrower" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -100.0
margin_top = -10.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="pause_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="active_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="pause_timer" to="." method="_on_pause_timer_timeout"]
[connection signal="timeout" from="active_timer" to="." method="_on_active_timer_timeout"]
